[package]
name = "z407-puck"
version = "0.1.0"
edition = "2021"

[dependencies]
bluest = "0.4"
egui = "0.27"
eframe = { version = "0.27", features = ["default"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
hex = "0.4"
env_logger = "0.10"
futures-util = "0.3"